--- a/config.example
+++ b/config.example
@@ -1,4 +1,5 @@
 apiUrl=https://api.dr.dk/radio/v2
+# Obtain API key by inspecting requests on dr.dk/lyd
 apiKey=
 outputDirectory=/var/drpodcastnu.github.io
 
