--- a/config.example
+++ b/config.example
@@ -35,3 +35,8 @@ slug6=moerklagt
 urn6=urn:dr:radio:series:63a03481d674a2f103dfc6e5
 titleSuffix6=(uden forsinkelse)
 descriptionSuffix6=Genudgivet RSS-feed.
+
+# Ubegribeligt
+slug7=ubegribeligt
+urn7=urn:dr:radio:series:626931758679fdf8af8a0e26
+descriptionSuffix7=Genudgivet RSS-feed.
