--- a/config.example
+++ b/config.example
@@ -40,3 +40,18 @@ descriptionSuffix6=Genudgivet RSS-feed.
 slug7=ubegribeligt
 urn7=urn:dr:radio:series:626931758679fdf8af8a0e26
 descriptionSuffix7=Genudgivet RSS-feed.
+
+# Hjernekassen
+slug8=hjernekassen
+urn8=urn:dr:radio:series:5fa2684c330eac2f135b9254
+descriptionSuffix8=Genudgivet RSS-feed.
+
+# Brinkmann's briks
+slug9=brinkmanns-briks
+urn9=urn:dr:radio:series:5fa25a95330eac2f135b4a6c
+descriptionSuffix9=Genudgivet RSS-feed.
+
+# Aftenland
+slug10=aftenland
+urn10=urn:dr:radio:series:5fa260f0330eac2f135b6d68
+descriptionSuffix10=Genudgivet RSS-feed.
