--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -15,6 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
 
+    - name: Setup Environment
+      run: |
+        echo "apiKey=${{ secrets.APIKEY }}" > config.example
+
     - name: Set up JDK 17
       uses: actions/setup-java@v2
       with:
@@ -25,4 +29,10 @@ jobs:
       run: ./gradlew build
 
     - name: Run JAR
-      run: java -jar build/libs/dr1ommer.jar
+      run: java -jar build/libs/DR1ommer-0.1.jar config.example
+
+    - name: Upload feed.xml as Artifact
+      uses: actions/upload-artifact@v2
+      with:
+        name: feed-artifact
+        path: ~/genstart/feed.xml
