--- a/.github/workflows/action.yml
+++ b/.github/workflows/action.yml
@@ -29,10 +29,10 @@ jobs:
       run: ./gradlew build assemble
 
     - name: Run JAR
-      run: java -jar build/libs/DR1ommer-0.1.jar config.example
+      run: java -jar $GITHUB_WORKSPACE/build/libs/DR1ommer-0.1.jar config.example
 
     - name: Upload feed.xml as Artifact
       uses: actions/upload-artifact@v2
       with:
         name: feed-artifact
-        path: ~/genstart/feed.xml
+        path: /home/runner/work/DR1ommer/DR1ommer/output/genstart/feed.xml
